# simple_graphics_engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.c  simple_graphics_engine
freq_test/: Makefile  freq_test.c
imp_links/: 3d_to_2d.txt
inc/: animation.h  main.h  vectors.h
src/: Makefile  animation.c  main.c  vectors.c
